kqed_dev4/src/objects/Premium_Scheduling__c.object
<CustomObject>
    <description>Scheduling object for Premiums and Drives.</description>
    <fields>
        <fullName>Associated_Drive__c</fullName>
        <label>Associated Drive</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Ship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Ship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drive_Type__c</fullName>
        <label>Drive Type</label>
        <picklist>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time_Seconds__c</fullName>
        <label>End Time Seconds</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Dollar_Association__c</fullName>
        <label>Max Dollar Association</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Dollar_Association__c</fullName>
        <label>Min Dollar Association</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Type__c</fullName>
        <label>Premium Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <displayFormat>PrgID-{00000000}</displayFormat>
        <label>Program ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Program_Show__c</fullName>
        <label>Program/Show</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Premiums Scheduling</relationshipLabel>
        <relationshipName>Premiums_Scheduling</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Location__c</fullName>
        <label>Schedule Location</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <label>Source Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speed_Bonus__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Eligibility for extra gift when order received within certain time frame. Radio use only.</inlineHelpText>
        <label>Speed/Bonus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time_Seconds__c</fullName>
        <label>Start Time Seconds</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Premium Scheduling</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Premium Scheduling Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premiums Scheduling</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>